kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  type: ClusterIP # Optional: ClusterIP is the default type
  selector:
    app: vpromc # Must match labels on the target Pods
  ports:
    - protocol: TCP
      port: 11211 # The port the service listens on inside the cluster
      targetPort: vpromc-port
      type: ClusterIP # Optional: ClusterIP is the default type
