kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq01
spec:
  type: ClusterIP # Optional: ClusterIP is the default type
  selector:
    app: vprormq # Must match labels on the target Pods
  ports:
    - port: 5672 # The port the service listens on inside the cluster
      protocol: TCP
      targetPort: vprormq-port
